# MechSage

./: .dockerignore  .gitignore  02_prd.md  Comparison report.md  Dockerfile  README (3).md  README.md  datacard_ai4i2020.md  final_evaluation_report.md  mechsage.db  pros_and_cons.md  requirements.txt
NASA_CMAPSS_RUL_Project/: Document_ML.md  README.md  pyproject.toml  requirements.txt
NASA_CMAPSS_RUL_Project/configs/: default.yaml
NASA_CMAPSS_RUL_Project/reports/: best_anomaly_metrics_FD001.json  best_anomaly_metrics_FD002.json  best_anomaly_metrics_FD003.json  best_anomaly_metrics_FD004.json  best_anomaly_model_card_FD001.json  best_anomaly_model_card_FD002.json  best_anomaly_model_card_FD003.json  best_anomaly_model_card_FD004.json  best_anomaly_params_FD001.json  best_anomaly_params_FD002.json  best_anomaly_params_FD003.json  best_anomaly_params_FD004.json  best_rul_metrics_FD001.json  best_rul_metrics_FD002.json  best_rul_metrics_FD003.json  best_rul_metrics_FD004.json  best_rul_model_card_FD001.json  best_rul_model_card_FD002.json  best_rul_model_card_FD003.json  best_rul_model_card_FD004.json  best_rul_params_FD001.json  best_rul_params_FD003.json  data_validation_FD001.json  data_validation_FD002.json  data_validation_FD003.json  data_validation_FD004.json  final_report_FD001.json  final_report_FD001.md  final_report_FD002.json  final_report_FD002.md  final_report_FD003.json  final_report_FD003.md  final_report_FD004.json  final_report_FD004.md  lead_time_backtest_FD001.md  model_comparison_FD001.csv  model_comparison_FD002.csv  model_comparison_FD003.csv  (+5 more)
(+234 files in other folders)
