[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechsage-cmapss"
version = "0.1.0"
description = "Production-ready NASA C-MAPSS RUL and anomaly detection pipeline with MLflow tracking."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MechSage Team" }]
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scikit-learn>=1.0.0",
  "xgboost>=1.5.0",
  "lightgbm>=3.3.0",
  "catboost>=1.0.0",
  "torch>=1.10.0",
  "optuna>=2.10.0",
  "mlflow>=2.0.0",
  "matplotlib>=3.4.0",
  "seaborn>=0.11.0",
  "joblib>=1.1.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0",
  "pylint>=3.0.0",
  "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
